@@ -54,12 +54,16 @@ if( isset( $protectedPost["VALID_END"] ) ) {
 	if ($protectedPost['REDISTRIB_USE'] == 1){
 		$timestamp_redistrib= time();
 		$server_dir=$protectedPost['download_rep_creat'];
+		$rep=$server_dir.$timestamp_redistrib;
 		//create zip file for redistribution servers
 		require_once("libraries/zip.lib.php");
 		$zipfile = new zipfile();
-		$rep = $protectedPost['document_root'].$sql_details['timestamp']."/";
-		@mkdir($server_dir);
-		@mkdir($server_dir.$timestamp_redistrib);
+		
+		if (!file_exists($server_dir)){
+			mkdir($server_dir);
+		}
+		if (!file_exists($server_dir.$timestamp_redistrib))
+			mkdir($rep);
 		$dir = opendir($rep);
 		while($f = readdir($dir)){
 		   if(is_file($rep.$f))
@@ -92,7 +96,7 @@ if( isset( $protectedPost["VALID_END"] ) ) {
 						'PROTO'=>$protectedPost['PROTOCOLE'],
 						'DIGEST_ALGO'=>$protectedPost["digest_algo"],
 						'DIGEST_ENCODE'=>$protectedPost["digest_encod"],
-						'PATH'=>$protectedPost['download_server_docroot'],
+						'PATH'=>$protectedPost['DOWNLOAD_SERVER_DOCROOT'],
 						'NAME'=>'',
 						'COMMAND'=>'',
 						'NOTIFY_USER'=>'0',
@@ -505,12 +509,17 @@ if ($_SESSION['OCS']["use_redistribution"] == 1){
 	if (!$default['DOWNLOAD_REP_CREAT'])
 	$default['DOWNLOAD_REP_CREAT'] = $_SERVER["DOCUMENT_ROOT"]."/download/server/";
 
-	if (!$protectedPost['REDISTRIB_REP'])
-	$protectedPost['REDISTRIB_REP']=$default['DOWNLOAD_REP_CREAT'];
+/*	if (!$protectedPost['REDISTRIB_REP'])
+		$protectedPost['REDISTRIB_REP']=$default['DOWNLOAD_REP_CREAT'];*/
 	if (!$protectedPost['REDISTRIB_PRIORITY'])
-	$protectedPost['REDISTRIB_PRIORITY']=$default['DOWNLOAD_PRIORITY'];
+		$protectedPost['REDISTRIB_PRIORITY']=$default['DOWNLOAD_PRIORITY'];
+	if (!$protectedPost['DOWNLOAD_SERVER_DOCROOT'])
+		$protectedPost['DOWNLOAD_SERVER_DOCROOT']=$default['DOWNLOAD_SERVER_DOCROOT'];
 	$redistrib_rep=$lign_begin.$l->g(829).$td_colspan2.$default['DOWNLOAD_REP_CREAT'].$lign_end;
-	$redistrib_rep_distant=$lign_begin.$l->g(1009).$td_colspan2.$default['DOWNLOAD_SERVER_DOCROOT'].$lign_end;
+	$config_input=array('MAXLENGTH'=>255,'SIZE'=>25);
+	$redistrib_rep_distant=$lign_begin.$l->g(1009).$td_colspan2.show_modif($protectedPost['DOWNLOAD_SERVER_DOCROOT'],'DOWNLOAD_SERVER_DOCROOT','0','',$config_input).$lign_end;
+	
+	//$redistrib_rep_distant=$lign_begin.$l->g(1009).$td_colspan2.$default['DOWNLOAD_SERVER_DOCROOT'].$lign_end;
 	$redistrib_prio=$lign_begin.$l->g(440).$td_colspan2.show_modif($list_prio,'REDISTRIB_PRIORITY',2,'').$lign_end;
 	echo "<tr><td colspan='3' align=center><div id='REDISTRIB_USE_div' style='display:".($protectedPost["REDISTRIB_USE"] == 1 ? " block" : "none")."'>";
 	echo $sous_tab_beg;
@@ -551,8 +560,8 @@ echo "</table>";
 echo "<br><input type='submit' name='valid' id='valid' value='".$l->g(13)."' OnClick='return verif();' >";
 echo "<input type='hidden' id='digest_algo' name='digest_algo' value='MD5'>
 	  <input type='hidden' id='digest_encod' name='digest_encod' value='Hexa'>
-	  <input type='hidden' id='download_rep_creat' name='download_rep_creat' value='".$default['DOWNLOAD_REP_CREAT']."'>
-	  <input type='hidden' id='download_server_docroot' name='download_server_docroot' value='".$default['DOWNLOAD_SERVER_DOCROOT']."'>";
+	  <input type='hidden' id='download_rep_creat' name='download_rep_creat' value='".$default['DOWNLOAD_REP_CREAT']."'>";
+//	  <input type='hidden' id='download_server_docroot' name='download_server_docroot' value='".$default['DOWNLOAD_SERVER_DOCROOT']."'>";
 echo close_form();	  
 echo "</div>";
 
