@@ -1,5 +1,6 @@
 Revision history for ocsreports
 2.1.1
+		* update redistribution servers. You can create package for windows and linux redistribution server.
 		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1283089
 		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1277904
 		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/1086324
